Test configurations management by @Value annotation, Environment interface, @ConfigurationProperties.

--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -20,3 +20,12 @@ spring:
 
 build:
   version: "2.0"
+
+accounts:
+  message: "Hello from the accounts service"
+  contactDetails:
+    name: "John Doe"
+    email: "customer@hostname.com"
+  onCallSupport:
+    - (555) 555-5555
+    - (555) 555-5556
