Testing Spring Boot profiles.

--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -18,8 +18,16 @@ spring:
       ddl-auto: update
     show-sql: true
 
+  config:
+    import:
+      - "application_qa.yml"
+      - "application_prod.yml"
+  profiles:
+    active:
+      - "qa"
+
 build:
-  version: "2.0"
+  version: "3.0"
 
 accounts:
   message: "Hello from the accounts service"
