Added profiles to another services.

--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -14,3 +14,23 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+  config:
+    import:
+      - "application_qa.yml"
+      - "application_prod.yml"
+  profiles:
+    active:
+      - "qa"
+
+build:
+  version: "3.0"
+
+cards:
+  message: "Hello from the cards service"
+  contactDetails:
+    name: "Jack Black"
+    email: "customer@hostname.com"
+  onCallSupport:
+    - (222) 555-5555
+    - (222) 555-5556
