--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -2,6 +2,10 @@ server:
   port: 8080
 
 spring:
+  application:
+    name: "accounts"
+  profiles:
+    active: "prod"
   datasource:
     url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
@@ -17,23 +21,5 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-
   config:
-    import:
-      - "application_qa.yml"
-      - "application_prod.yml"
-  profiles:
-    active:
-      - "qa"
-
-build:
-  version: "3.0"
-
-accounts:
-  message: "Hello from the accounts service"
-  contactDetails:
-    name: "John Doe"
-    email: "customer@hostname.com"
-  onCallSupport:
-    - (555) 555-5555
-    - (555) 555-5556
+    import: "optional:configserver:http://localhost:8071/"
