--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 9000
 spring:
+  application:
+    name: "cards"
+  profiles:
+    active: "prod"
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
@@ -14,23 +18,5 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-
   config:
-    import:
-      - "application_qa.yml"
-      - "application_prod.yml"
-  profiles:
-    active:
-      - "qa"
-
-build:
-  version: "3.0"
-
-cards:
-  message: "Hello from the cards service"
-  contactDetails:
-    name: "Jack Black"
-    email: "customer@hostname.com"
-  onCallSupport:
-    - (222) 555-5555
-    - (222) 555-5556
+    import: "optional:configserver:http://localhost:8071/"
