--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -23,6 +23,11 @@ spring:
     show-sql: true
   config:
     import: "optional:configserver:http://localhost:8071/"
+  rabbitmq:
+    host: "rabbitmq.local"
+    port: 5672
+    username: "guest"
+    password: "guest"
 
 management:
   endpoints:
