--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -20,6 +20,11 @@ spring:
     show-sql: true
   config:
     import: "optional:configserver:http://localhost:8071/"
+  rabbitmq:
+    host: "rabbitmq.local"
+    port: 5672
+    username: "guest"
+    password: "guest"
 management:
   endpoints:
     web:
