--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -16,3 +16,14 @@ spring:
           clone-on-start: true
           force-pull: true
 
+  rabbitmq:
+    host: "rabbitmq.local"
+    port: 5672
+    username: "guest"
+    password: "guest"
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
