Update microservices code to replace H2 DB with MySQL DB.

--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -6,18 +6,15 @@ spring:
   profiles:
     active: "prod"
   datasource:
-    url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
-    username: sa
-    password: ''
-  h2:
-    console:
-      enabled: true
+    url: jdbc:mysql://micro-sql.local:3308/cardsdb
+    username: root
+    password: root
+  sql:
+    init:
+      mode: always
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: update
     show-sql: true
+
   config:
     import: "optional:configserver:http://localhost:8071/"
 
