--- a/docker-compose/qa/docker-compose.yml
+++ b/docker-compose/qa/docker-compose.yml
@@ -1,28 +1,39 @@
 services:
-  rabbitmq:
-    image: rabbitmq:3.12-management
-    hostname: rabbitmq.local
+  accountsdb:
+    container_name: accountsdb
     ports:
-      - "5672:5672"
-      - "15672:15672"
-    healthcheck:
-      test: rabbitmq-diagnostics check_port_connectivity
-      interval: 10s
-      timeout: 5s
-      retries: 10
-      start_period: 5s
+      - "3306:3306"
+    environment:
+      MYSQL_DATABASE: "accountsdb"
     extends:
       file: common-config.yml
-      service: network-deploy-service
+      service: microservice-db-config
+
+  cardsdb:
+    container_name: cardsdb
+    ports:
+      - "3308:3306"
+    environment:
+      MYSQL_DATABASE: "cardsdb"
+    extends:
+      file: common-config.yml
+      service: microservice-db-config
+
+  loansdb:
+    container_name: loansdb
+    ports:
+      - "3307:3306"
+    environment:
+      MYSQL_DATABASE: "loansdb"
+    extends:
+      file: common-config.yml
+      service: microservice-db-config
 
   configserver:
-    image: stpunk47/configserver:v2
+    image: stpunk47/configserver:v3
     container_name: configserver-ms
     ports:
       - "8071:8071"
-    depends_on:
-      rabbitmq:
-        condition: service_healthy
     healthcheck:
       test: "curl --fail --silent http://localhost:8071/actuator/health/readiness | grep UP || exit 1"
       interval: 10s
@@ -34,37 +45,49 @@ services:
       service: microservice-base-config
 
   accounts:
-    image: stpunk47/accounts:v2
+    image: stpunk47/accounts:v3
     container_name: accounts-ms
     ports:
       - "8080:8080"
     extends:
       file: common-config.yml
       service: microservice-configserver-config
+    depends_on:
+      accountsdb:
+        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "accounts"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://accountsdb:3306/accountsdb"
 
   loans:
-    image: stpunk47/loans:v2
+    image: stpunk47/loans:v3
     container_name: loans-ms
     ports:
       - "8090:8090"
     extends:
       file: common-config.yml
       service: microservice-configserver-config
+    depends_on:
+      loansdb:
+        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "loans"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://loansdb:3306/loansdb"
 
   cards:
-    image: stpunk47/cards:v2
+    image: stpunk47/cards:v3
     container_name: cards-ms
     ports:
       - "9000:9000"
     extends:
       file: common-config.yml
       service: microservice-configserver-config
+    depends_on:
+      cardsdb:
+        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "cards"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://cardsdb:3306/cardsdb"
 
 networks:
   stbank-network:
