--- a/docker-compose/prod/docker-compose.yml
+++ b/docker-compose/prod/docker-compose.yml
@@ -1,34 +1,4 @@
 services:
-  accountsdb:
-    container_name: accountsdb
-    ports:
-      - "3306:3306"
-    environment:
-      MYSQL_DATABASE: "accountsdb"
-    extends:
-      file: common-config.yml
-      service: microservice-db-config
-
-  cardsdb:
-    container_name: cardsdb
-    ports:
-      - "3308:3306"
-    environment:
-      MYSQL_DATABASE: "cardsdb"
-    extends:
-      file: common-config.yml
-      service: microservice-db-config
-
-  loansdb:
-    container_name: loansdb
-    ports:
-      - "3307:3306"
-    environment:
-      MYSQL_DATABASE: "loansdb"
-    extends:
-      file: common-config.yml
-      service: microservice-db-config
-
   configserver:
     image: stpunk47/configserver:v3
     container_name: configserver-ms
@@ -52,12 +22,9 @@ services:
     extends:
       file: common-config.yml
       service: microservice-configserver-config
-    depends_on:
-      accountsdb:
-        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "accounts"
-      SPRING_DATASOURCE_URL: "jdbc:mysql://accountsdb:3306/accountsdb"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://micro-sql.local:3306/accountsdb"
 
   loans:
     image: stpunk47/loans:v3
@@ -67,12 +34,9 @@ services:
     extends:
       file: common-config.yml
       service: microservice-configserver-config
-    depends_on:
-      loansdb:
-        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "loans"
-      SPRING_DATASOURCE_URL: "jdbc:mysql://loansdb:3306/loansdb"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://micro-sql.local:3307/loansdb"
 
   cards:
     image: stpunk47/cards:v3
@@ -82,12 +46,9 @@ services:
     extends:
       file: common-config.yml
       service: microservice-configserver-config
-    depends_on:
-      cardsdb:
-        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "cards"
-      SPRING_DATASOURCE_URL: "jdbc:mysql://cardsdb:3306/cardsdb"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://micro-sql.local:3308/cardsdb"
 
 networks:
   stbank-network:
