--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -18,11 +18,31 @@ spring:
   config:
     import: "optional:configserver:http://localhost:8071/"
 
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8070/eureka
+
+info:
+  app:
+    name: "loans"
+    description: "StBank Loans Microservice"
+    version: "1.0.0"
+
 management:
   endpoints:
     web:
       exposure:
         include: '*'
+  info:
+    env:
+      enabled: true
   endpoint:
     health:
       show-details: always
+    shutdown:
+      access: unrestricted
