--- a/docker-compose/default/common-config.yml
+++ b/docker-compose/default/common-config.yml
@@ -10,8 +10,6 @@ services:
       resources:
         limits:
           memory: "768m"
-    environment:
-      SPRING_RABBITMQ_HOST: "rabbitmq"
 
   microservice-configserver-config:
     extends:
@@ -19,8 +17,11 @@ services:
     depends_on:
       configserver:
         condition: service_healthy
+      eurekaserver:
+        condition: service_healthy
     environment:
       SPRING_PROFILES_ACTIVE: default
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071
       SPRING_DATASOURCE_USERNAME: "root"
       SPRING_DATASOURCE_PASSWORD: "root"
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka
