Update Gateway server configuration to use locally.

--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
     show-sql: true
 
   config:
-    import: "optional:configserver:http://configserver:8071/"
+    import: "optional:configserver:http://localhost:8071/"
 
 eureka:
   instance:
@@ -27,7 +27,7 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://eurekaserver:8070/eureka
+      defaultZone: http://localhost:8070/eureka
 
 info:
   app:
