--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
     show-sql: true
 
   config:
-    import: "optional:configserver:http://configserver:8071/"
+    import: "optional:configserver:http://localhost:8071/"
 
 eureka:
   instance:
@@ -25,7 +25,7 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://eurekaserver:8070/eureka
+      defaultZone: http://localhost:8070/eureka
 
 info:
   app:
