Implement cross cutting concerns Tracing & Logging using Gateway.

--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -46,3 +46,9 @@ management:
       show-details: always
     shutdown:
       access: unrestricted
+
+logging:
+  level:
+    com:
+      stpunk47:
+        cards: DEBUG
