--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -48,3 +48,9 @@ management:
       show-details: always
     shutdown:
       access: unrestricted
+
+logging:
+  level:
+    com:
+      stpunk47:
+        accounts: DEBUG
