--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -46,3 +46,9 @@ management:
       show-details: always
     shutdown:
       access: unrestricted
+
+logging:
+  level:
+    com:
+      stpunk47:
+        loans: DEBUG
