Update Docker compose to adapt Spring Cloud Gateway changes.

--- a/docker-compose/default/common-config.yml
+++ b/docker-compose/default/common-config.yml
@@ -17,6 +17,8 @@ services:
     environment:
       SPRING_PROFILES_ACTIVE: default
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
+      SPRING_CLOUD_CONFIG_URI: http://configserver:8071
+      SPRING_CLOUD_CONFIG_FAIL_FAST: "true"
       SPRING_DATASOURCE_USERNAME: "root"
       SPRING_DATASOURCE_PASSWORD: "root"
 
