--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
     show-sql: true
 
   config:
-    import: "optional:configserver:http://localhost:8071/"
+    import: "optional:configserver:http://configserver:8071/"
 
 eureka:
   instance:
@@ -25,7 +25,7 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://localhost:8070/eureka
+      defaultZone: http://eurekaserver:8070/eureka
 
 info:
   app:
@@ -41,9 +41,15 @@ management:
   info:
     env:
       enabled: true
+  health:
+    readiness-state:
+      enabled: true
+    liveness-state:
+      enabled: true
   endpoint:
     health:
-      show-details: always
+      probes:
+        enabled: true
     shutdown:
       access: unrestricted
 
