Implement Circuit Breaker pattern in Gateway.

--- a/gatewayserver/src/main/resources/application.yml
+++ b/gatewayserver/src/main/resources/application.yml
@@ -37,3 +37,11 @@ logging:
     com:
       stpunk47:
         gatewayserver: DEBUG
+
+resilience4j.circuitbreaker:
+    configs:
+      default:
+        slidingWindowSize: 10
+        permittedNumberOfCallsInHalfOpenState: 2
+        failureRateThreshold: 50
+        waitDurationInOpenState: 10s
