Implement Retry pattern in Accounts service. Fix ResponseTraceFilter to prevent multiple correlation id's to appear.

--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -72,3 +72,11 @@ resilience4j.circuitbreaker:
       permittedNumberOfCallsInHalfOpenState: 2
       failureRateThreshold: 50
       waitDurationInOpenState: 10s
+
+resilience4j.retry:
+  configs:
+    default:
+      maxAttempts: 3
+      waitDuration: 1s
+      enable-exponential-backoff: true
+      exponential-backoff-multiplier: 2
