Implement logging using Grafana, Loki, Alloy, Prometheus, Tempo.

--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -58,6 +58,12 @@ management:
         enabled: true
     shutdown:
       access: unrestricted
+    prometheus:
+      access: unrestricted
+  prometheus:
+    metrics:
+      export:
+        enabled: true
 
 logging:
   level:
