--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -52,6 +52,12 @@ management:
         enabled: true
     shutdown:
       access: unrestricted
+    prometheus:
+      access: unrestricted
+  prometheus:
+   metrics:
+     export:
+       enabled: true
 
 logging:
   level:
