--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -30,3 +30,9 @@ management:
     health:
       probes:
        enabled: true
+    prometheus:
+      access: unrestricted
+  prometheus:
+    metrics:
+     export:
+       enabled: true
