--- a/eurekaserver/pom.xml
+++ b/eurekaserver/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.stpunk47</groupId>
 	<artifactId>eurekaserver</artifactId>
-	<version>v3</version>
+	<version>v4</version>
 	<name>eurekaserver</name>
 	<description>Service Discovery agent for StBank microservices</description>
 	<url/>
@@ -43,7 +43,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
