--- a/gatewayserver/pom.xml
+++ b/gatewayserver/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.stpunk47</groupId>
 	<artifactId>gatewayserver</artifactId>
-	<version>v3</version>
+	<version>v4</version>
 	<name>gatewayserver</name>
 	<description>Edge Server for StBank microservices</description>
 	<url/>
@@ -60,6 +60,10 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
