--- a/gatewayserver/src/main/resources/application.yml
+++ b/gatewayserver/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
           lower-case-service-id: true
       httpclient:
         connect-timeout: 1000
-        response-timeout: 2s
+        response-timeout: 10s
   data:
     redis:
       connect-timeout: 2s
@@ -40,6 +40,12 @@ management:
       access: unrestricted
     gateway:
       access: unrestricted
+    prometheus:
+      access: unrestricted
+  prometheus:
+    metrics:
+      export:
+       enabled: true
 
 logging:
   level:
