Add metrics configuration fix.

--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -58,6 +58,9 @@ management:
    metrics:
      export:
        enabled: true
+  metrics:
+    tags:
+      application: ${spring.application.name}
 
 logging:
   level:
