--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -36,3 +36,6 @@ management:
     metrics:
      export:
        enabled: true
+  metrics:
+    tags:
+      application: ${spring.application.name}
