--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -67,3 +67,5 @@ logging:
     com:
       stpunk47:
         cards: DEBUG
+  pattern:
+    level: "%5p [${spring.application.name},%X{traceId},%X{spanId}]"
