--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -68,4 +68,4 @@ logging:
       stpunk47:
         cards: DEBUG
   pattern:
-    level: "%5p [${spring.application.name},%X{traceId},%X{spanId}]"
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
