--- a/docker-compose/default/docker-compose.yml
+++ b/docker-compose/default/docker-compose.yml
@@ -227,6 +227,8 @@ services:
     extends:
       file: common-config.yml
       service: microservice-base-config
+    environment:
+      OTEL_SERVICE_NAME: "configserver"
 
   eurekaserver:
     image: "stpunk47/eurekaserver:v4"
@@ -252,6 +254,7 @@ services:
       SPRING_CLOUD_CONFIG_URI: "http://configserver:8071"
       SPRING_CLOUD_CONFIG_FAIL_FAST: "false"
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: "http://eurekaserver:8070/eureka/"
+      OTEL_SERVICE_NAME: "eurekaserver"
 
   accounts:
     image: "stpunk47/accounts:v4"
@@ -275,6 +278,7 @@ services:
     environment:
       SPRING_APPLICATION_NAME: "accounts"
       SPRING_DATASOURCE_URL: "jdbc:mysql://micro-sql.local:3306/accountsdb"
+      OTEL_SERVICE_NAME: "accounts"
 
   loans:
     image: "stpunk47/loans:v4"
@@ -298,6 +302,7 @@ services:
     environment:
       SPRING_APPLICATION_NAME: "loans"
       SPRING_DATASOURCE_URL: "jdbc:mysql://micro-sql.local:3307/loansdb"
+      OTEL_SERVICE_NAME: "loans"
 
   cards:
     image: "stpunk47/cards:v4"
@@ -321,6 +326,7 @@ services:
     environment:
       SPRING_APPLICATION_NAME: "cards"
       SPRING_DATASOURCE_URL: "jdbc:mysql://micro-sql.local:3308/cardsdb"
+      OTEL_SERVICE_NAME: "cards"
 
   gatewayserver:
     image: "stpunk47/gatewayserver:v4"
@@ -336,6 +342,7 @@ services:
         condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "gatewayserver"
+      OTEL_SERVICE_NAME: "gatewayserver"
 
     extends:
       file: common-config.yml
