Implement async communication or event streaming using Kafka.

--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -39,12 +39,10 @@ spring:
          group: ${spring.application.name}
        sendCommunication-out-0:
          destination: send-communication
-  rabbitmq:
-    host: "rabbitmq.local"
-    port: 5672
-    username: "guest"
-    password: "guest"
-    connection-timeout: 10s
+     kafka:
+       binder:
+         brokers:
+           - localhost:9092
 
 
 eureka:
